[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/MissionOverview.gd" type="Script" id=1]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/memo-theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/scroll.png" type="Texture" id=4]
[ext_resource path="res://game/tutorial/Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/seed/seed.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="MissionOverview" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="CenterContainer" parent="."]
margin_left = 810.0
margin_top = 365.0
margin_right = 1110.0
margin_bottom = 715.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 300.0
margin_bottom = 350.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 350 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
patch_margin_left = 73
patch_margin_top = 68
patch_margin_right = 47
patch_margin_bottom = 56

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 27.0
margin_top = 45.0
margin_right = 272.0
margin_bottom = 305.0
custom_constants/margin_right = 50
custom_constants/margin_top = 30
custom_constants/margin_left = 50
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 195.0
margin_bottom = 230.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 145.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 24.0
text = "<"

[node name="Title" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 121.0
margin_bottom = 24.0
size_flags_horizontal = 7
custom_fonts/font = SubResource( 1 )
text = "Mission #1"
align = 1

[node name="Next" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 145.0
margin_bottom = 24.0
text = ">"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 145.0
margin_bottom = 38.0

[node name="Errands" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 145.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Goal" parent="MarginContainer/MarginContainer/VBoxContainer/Errands" instance=ExtResource( 5 )]
text = "Ziel 1"

[node name="Goal2" parent="MarginContainer/MarginContainer/VBoxContainer/Errands" instance=ExtResource( 5 )]
margin_top = 34.0
margin_bottom = 64.0
text = "Ziel 2"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 145.0
margin_bottom = 126.0

[node name="Start" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 145.0
margin_bottom = 156.0
text = "start mission"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 145.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 145.0
margin_bottom = 200.0
text = "back to titlescreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -50, 0 )
z_index = -1
amount = 64
lifetime = 8.0
texture = ExtResource( 6 )
emission_shape = 2
emission_rect_extents = Vector2( 50, 500 )
spread = 100.0
gravity = Vector2( 98, 0 )
orbit_velocity = 0.01
linear_accel = 10.0
radial_accel = 50.0
tangential_accel = 50.0
tangential_accel_random = 1.0
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
